@@ -25,7 +25,7 @@ An ultra fast cross-platform multiple screenshots module in pure python using ct
 - integrate well with Numpy and OpenCV;
 - it could be easily embedded into games and other softwares which require fast and plateforme optimized methods to grab screenshots;
 - get the `source code on GitHub <https://github.com/BoboTiG/python-mss>`_;
-- learn with a `bunch of examples <https://python-mss.readthedocs.io/en/dev/examples.html>`_;
+- learn with a `bunch of examples <https://python-mss.readthedocs.io/en/latest/examples.html>`_;
 - you can `report a bug <https://github.com/BoboTiG/python-mss/issues>`_;
 - need some help? Use the tag *python-mss* on `StackOverflow <https://stackoverflow.com/questions/tagged/python-mss>`_;
 - and there is a `complete, and beautiful, documentation <https://python-mss.readthedocs.io>`_ :)
