@@ -3,6 +3,8 @@ History:
 <see Git checking messages for history>
 
 dev     2017/xx/xx
+      - ci: build the documentation
+      - doc: improvements and fixes (fix #37)
 
 3.1.1   2017/11/27
       - MSS: add the 'mss' entry point
